--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,49 +1,33 @@
-name: Generate Snake
+name: Generate snake animation
 
-# Controls when the action will run. This action runs every 6 hours.
 on:
-  schedule:
-    # every 6 hours
-    - cron: "0 */6 * * *"
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
 
-  # This command allows us to run the Action manually from the Actions tab.
   workflow_dispatch:
 
-# The sequence of runs in this workflow:
+  push:
+    branches:
+    - master
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks repo under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Generates the snake  
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: AminaHajaMeyan
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          github_user_name: ${{ github.repository_owner }}
+          outputs: dist/snake.svg?palette=github-dark
 
-      # Show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
 
-      # Commit and push the changes
-      - name: Commit and push changes
-        uses: github-actions-x/commit@v3
+      - name: push snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          commit-message: "Update snake gif and svg"
-
-      - uses: crazy-max/ghaction-github-pages@v3
-        with:
-          # The output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
